--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,16 +82,15 @@ services:
     networks:
         - quiz-net
 
-
-  ranking-db:
-    container_name: ranking_base_de_donnee
+  reward-db:
+    container_name: reward_base_de_donnee
     image: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: ranking_db
+      POSTGRES_DB: reward_db
     volumes:
-      - ranking-data:/var/lib/postgresql/data
+      - reward-data:/var/lib/postgresql/data
     ports:
       - "5434:5432"
     networks:
@@ -103,27 +102,6 @@ services:
       timeout: 5s
       retries: 5
 
-  ranking-service:
-    environment:
-      EUREKA_SERVER_URL: http://discovery-service:8761/eureka/
-      SPRING_PROFILES_ACTIVE: docker
-      SPRING_CLOUD_CONFIG_URI: http://config-server:8888
-    build:
-      context: ./ranking-service
-      dockerfile: Dockerfile
-    container_name: ranking-service
-    ports:
-      - "8082:8082"
-    depends_on:
-      config-server:
-        condition: service_healthy
-      discovery-service:
-        condition: service_healthy
-      ranking-db:
-        condition: service_healthy
-    networks:
-      - quiz-net
-
   reward-service:
     environment:
       EUREKA_SERVER_URL: http://discovery-service:8761/eureka/
@@ -134,19 +112,16 @@ services:
       dockerfile: Dockerfile
     container_name: reward-service
     ports:
-      - "8083:8083"
+      - "8082:8082"
     depends_on:
       config-server:
         condition: service_healthy
       discovery-service:
         condition: service_healthy
+      reward-db:
+        condition: service_healthy
     networks:
       - quiz-net
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8083/actuator/health" ]
-      interval: 5s
-      timeout: 3s
-      retries: 5
 
   discovery-service:
     environment:
@@ -220,4 +195,4 @@ networks:
 volumes:
   questionnaire-data:
   user-data:
-  ranking-data:
+  reward-data:
