--- a/reward-service/src/main/resources/application.yml
+++ b/reward-service/src/main/resources/application.yml
@@ -2,19 +2,32 @@ spring:
   application:
     name: reward-service
 
-  config:
-    import: "optional:configserver:"
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5434/reward_db}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASS:password}
+    driver-class-name: org.postgresql.Driver
 
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+  config:
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 server:
-  port: 8083
+  port: 8082
 
 eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
+
   instance:
-    hostname: reward-service
     prefer-ip-address: true
     health-check-url-path: /actuator/health
     status-page-url-path: /actuator/info
@@ -22,30 +35,7 @@ eureka:
       management:
         port: 8082
 
-resilience4j:
-  circuitbreaker:
-    instances:
-      noteService:
-        registerHealthIndicator: true
-        slidingWindowSize: 10
-        failureRateThreshold: 50
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: docker
-    import: "optional:configserver:http://config-server:8888"
-
-
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: "http://discovery-service:8761/eureka"
+logging:
+  level:
+    org.springframework.cloud: DEBUG
+    com.zaxxer.hikari: TRACE
