Ajout filtre role admin front et back. ajout calcul point selon temps de réponses. Indexation et mise en cache de requette en bdd pour meilleur perf

--- a/reward-service/pom.xml
+++ b/reward-service/pom.xml
@@ -147,6 +147,10 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
