--- a/reward-service/src/main/resources/application.yml
+++ b/reward-service/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: reward-service
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=500,expireAfterWrite=10m
 
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5434/reward_db}
@@ -44,3 +48,4 @@ security:
   jwt:
     secret: "MaCleSuperSecreteQuiFaitPlusDe32Caractères1234"
     expiration: 3600000
+
