--- a/quiz-service/pom.xml
+++ b/quiz-service/pom.xml
@@ -37,6 +37,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
+        <spring-boot.version>3.4.5</spring-boot.version>
 	</properties>
 	<dependencies>
 
@@ -123,6 +124,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
 				<executions>
 					<execution>
 						<goals>
