--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -38,6 +38,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
+        <spring-boot.version>3.4.5</spring-boot.version>
 	</properties>
 	<dependencies>
 
@@ -159,7 +160,8 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
+                <version>${spring-boot.version}</version>
+                <executions>
 					<execution>
 						<goals>
 							<goal>repackage</goal> <!-- C'est ce qui crée un jar exécutable -->
