--- a/reward-service/pom.xml
+++ b/reward-service/pom.xml
@@ -152,6 +152,11 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope> <!-- seulement pour les tests -->
+        </dependency>
     </dependencies>
 
 	<build>
