--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,11 @@ variables:
 # ======================
 build:
   stage: build
-  image: maven:3.9.2-eclipse-temurin-21
+  image: maven:4.0.0-rc-4-amazoncorretto-21
   script:
+    - apt-get update -y
+    - apt-get install -y maven
+    - mvn -B clean compile
     - mvn $MAVEN_CLI_OPTS clean compile
   artifacts:
     paths:
@@ -30,7 +33,7 @@ build:
 # ======================
 test:
   stage: test
-  image: maven:3.9.2-eclipse-temurin-21
+  image: maven:4.0.0-rc-4-amazoncorretto-21
   script:
     - mvn $MAVEN_CLI_OPTS test
   artifacts:
