--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -16,11 +16,7 @@ COPY reward-service ./reward-service
 COPY user-service ./user-service
 
 # 3. Installer les artefacts partagés (DTO) dans le répertoire local Maven du conteneur
-
-RUN mvn clean install -pl quiz-shared-dto -DskipTests
-
-# 4. Compiler et packager le module cible (user-service)
-RUN mvn package -pl user-service -DskipTests
+RUN mvn clean install -pl user-service -am -DskipTests
 
 # Stage 2: runtime
 FROM eclipse-temurin:21-jre-alpine
