--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -16,12 +16,7 @@ COPY quiz-shared-dto ./quiz-shared-dto
 COPY reward-service ./reward-service
 COPY user-service ./user-service
 
-# 3. Installer les artefacts partagés (DTO) dans le répertoire local Maven du conteneur
-
-RUN mvn clean install -pl quiz-shared-dto -DskipTests
-
-# 4. Compiler et packager le module cible (config-server)
-RUN mvn package -pl config-server -DskipTests
+RUN mvn clean install -pl config-server -am -DskipTests
 
 # Stage 2: runtime
 FROM eclipse-temurin:21-jre-alpine
