--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -16,9 +16,11 @@ COPY quiz-shared-dto ./quiz-shared-dto
 COPY reward-service ./reward-service
 COPY user-service ./user-service
 
-# 3. Installer les artefacts partagés (DTO) dans le répertoire local Maven du conteneur
+# 2. SE DÉPLACER DANS LE DOSSIER DU MICROSERVICE
+WORKDIR /app/gateway-service
 
-RUN mvn clean install -pl gateway-service -am -DskipTests
+# 3. Compiler le module gateway-service
+RUN mvn clean package -DskipTests
 
 # Stage 2: runtime
 FROM eclipse-temurin:21-jre-alpine
