--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,23 +1,9 @@
 
 FROM maven:3.9.4-amazoncorretto-21 AS builder
-WORKDIR /app
-
-# 1. Copier le POM parent
-COPY pom.xml .
-
-# 2. Copier tous les modules listés dans le POM parent
-COPY config-server ./config-server
-COPY discovery-service ./discovery-service
-COPY gateway-service ./gateway-service
-COPY quiz-front ./quiz-front
-
-COPY quiz-service ./quiz-service
-COPY quiz-shared-dto ./quiz-shared-dto
-COPY reward-service ./reward-service
-COPY user-service ./user-service
 
 # 2. SE DÉPLACER DANS LE DOSSIER DU MICROSERVICE
 WORKDIR /app/gateway-service
+COPY . .
 
 # 3. Compiler le module gateway-service
 RUN mvn clean package -DskipTests
