--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,25 +1,11 @@
 FROM maven:3.9.4-amazoncorretto-21 AS builder
 
-WORKDIR /app
-
-# 1. Copier le POM parent
-COPY pom.xml .
-
-# 2. Copier tous les modules listés dans le POM parent
-COPY config-server ./config-server
-COPY discovery-service ./discovery-service
-COPY gateway-service ./gateway-service
-COPY quiz-front ./quiz-front
-
-COPY quiz-service ./quiz-service
-COPY quiz-shared-dto ./quiz-shared-dto
-COPY reward-service ./reward-service
-COPY user-service ./user-service
 
 # 2. SE DÉPLACER DANS LE DOSSIER DU MICROSERVICE
 WORKDIR /app/config-server
+COPY . .
 
-# 3. Compiler le module config-server
+# 2. Compiler le module config-server
 RUN mvn clean package -DskipTests
 
 # Stage 2: runtime
