--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: question_db
     volumes:
-      - questionnaire-data:/var/lib/postgresql/data
+      - questionnaire-data:/var/lib/postgresql
     ports:
       - "5432:5432"
     networks:
@@ -97,7 +97,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: user_db
     volumes:
-      - user-data:/var/lib/postgresql/data
+      - user-data:/var/lib/postgresql
     ports:
       - "5433:5432"
     networks:
@@ -117,7 +117,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: reward_db
     volumes:
-      - reward-data:/var/lib/postgresql/data
+      - reward-data:/var/lib/postgresql
     ports:
       - "5434:5432"
     networks:
